use list input for tmux send keys
