# deploy/openapi.yaml
@@ -127,11 +127,20 @@ paths:
           required: true
           schema:
             type: string
-        - name: input
-          in: query
-          required: true
-          schema:
-            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                input:
+                  type: array
+                  items:
+                    type: string
+              required:
+                - input
+              description: List of key strings to send to tmux (e.g., ["Escape", ":q", "Enter"] to exit vim). In the rare case you need a key name literally, split them up (e.g. ["Esca", "pe"] instead of ["Escape"]).
       responses:
         '200':
           description: Input sent
